--- a/src/pages/pay/pay.scss
+++ b/src/pages/pay/pay.scss
@@ -1,6 +1,7 @@
 page-pay {
   ion-content {
-    background-image: url('../../assets/img/background.png');
+    background-color: #666;
+    background-image: url('../assets/img/background.png');
     background-size: cover;
     .calc-input {
       div.input {
