--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,6 +2,7 @@
 // http://ionicframework.com/docs/v2/theming/
 $font-path: "../assets/fonts";
 @import "ionic.globals";
+@import "global";
 // Shared Variables
 // --------------------------------------------------
 // To customize the look and feel of this app, you can override
