--- a/src/pages/pay/pay.scss
+++ b/src/pages/pay/pay.scss
@@ -5,6 +5,7 @@ page-pay {
         color: white;
         font-size: 2.5em;
         text-align: right;
+        text-shadow: 1px 1px #333;
       }
     }
     .calc-buttons {
