--- a/src/pages/payments/payments.scss
+++ b/src/pages/payments/payments.scss
@@ -1,1 +1,29 @@
-page-payments {}
+page-payments {
+  h1 {
+    color: white;
+    font-weight: 200;
+    text-align: center;
+    border-bottom: 1px solid white;
+    padding: 5px;
+    margin-bottom: 5px;
+  }
+  ion-card {
+    .card-header-md {
+      color: white;
+    }
+    &.item-md,
+    &.item {
+      font-size: 1.5em;
+      padding: 8px;
+      color: white;
+      background-color: rgba(255, 255, 255, 0.3);
+      margin-bottom: 5px;
+      .item-inner {
+        border: none !important;
+      }
+      span.amount {
+        float: right;
+      }
+    }
+  }
+}
